outputs/tsp_constructive-constructive/mcts-ahd/2025-09-28_08-09-19/evaluations/problem_eval6658258861309818594_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance (weight 0.2–0.4) based on remaining nodes, and uses a fixed lookahead depth of 2 to balance exploration and exploitation, with no connectivity penalties to encourage diverse paths.}
                         ^
SyntaxError: invalid decimal literal

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance (weight 0.2–0.4) based on remaining nodes, and uses a fixed lookahead depth of 2 to balance exploration and exploitation, with no connectivity penalties to encourage diverse paths.}
                         ^
SyntaxError: invalid decimal literal
